más incisos completados

--- a/practica/07-ip.md
+++ b/practica/07-ip.md
@@ -25,3 +25,90 @@
 3. ¿Qué son las subredes? ¿Por qué es importante siempre especificar la máscara de subred asociada?
 
     Una subnet es una división lógica de una red IP. La división de una red en dos o más redes se denomina subnetting.
+
+4. Describa qué es y para qué sirve el protocolo ICMP.
+
+    Es un protocolo que permite administrar información relacionada con errores de los equipos en red. Si se tienen en cuenta los escasos controles que lleva a cabo el protocolo IP, ICMP no permite corregir los errores sino que los notifica a los protocolos de capas cercanas. Por lo tanto, el protocolo ICMP es usado por todos los router para indicar errores.
+
+    1. Analice cómo funciona el comando ping.
+
+        Lo que hace PING es mandar un paquete a una dirección designada y esperar una respuesta. Funciona de manera similar al pulso de sonar de un submarino.
+
+        1. Indique el tipo y código ICMP que usa el ping.
+
+            El _echo request_ tiene el tipo 8 y código 0.
+
+        2. Indique el tipo y código ICMP que usa la respuesta de un ping.
+
+            El _echo reply_ utiliza el tipo 0 y código 0.
+
+    2. Analice cómo funciona el comando traceroute(tracert en Windows) y cómo manipula el campo TTL de los paquetes IP.
+
+        El TTL es un campo que sirve para que un paquete no permanezca en la red de forma indefinida. Es un número entero que es decrementado por cada nodo por el que pasa el paquete. De tal forma, cuando el campo TTL llega al valor 0 ya no se reenviará más, sino que el nodo que lo esté manejando en ese momento lo descartará. Lo que hace tracert es mandar paquetes a la red de forma que el primer paquete lleve un valor TTL=1, el segundo TTL=2, etc. De esta forma, el primer paquete será eliminado por el primer nodo al que llegue(ya que este nodo decrementará el valor TTl, llegando a 0). Cuando un nodo elimina un paquete, envía al emisor un mensaje de control especial indicando una incidencia. Tracert usa esta respuesta para averiguar la dirección IP del nodo que desechó el paquete, que será el primer nodo de la red. La segunda vez que se manda un paquete, el TTL vale 2, por lo que pasará el primer nodo y llegará al segundo, donde será descartado, devolviendo de nuevo un mensaje de control. Esto se hace de forma sucesiva hasta que el paquete llega a su destino.
+
+    3. Indique la cantidad de saltos realizados desde su computadora hasta el sitio info.unlp.edu.ar. En algunos de los saltos ¿Muestra el nombre del dominio asociado al salto y su ip? Detalle los encontrados.
+
+        //preugntar
+
+    4. Verifique el recorrido a dos de los servidores de mail de gmail.com y compare los saltos realizados ¿Realizaron la misma cantidad de saltos, hicieron el mismo camino?
+
+        //preguntar
+
+5. ¿Para que se usa el bloque 127.0.0.0/8? ¿Qué PC responde a los siguientes comandos?
+
+    1. ping 127.0.0.1
+    2. ping 127.0.54.43
+    
+    Son las llamadas direcciones de loopback utilizadas para probar la capacidad de la tarjeta interna si se están enviando datos BGP. También se usan cuando una transmisión de datos tiene como destino el propio host o durante tareas de diagnóstico de conectividad y validez del protocolo de comunicación.
+
+6. Investigue para qué sirven los comandos _ifconfig_ y _route_ ¿Qué comandos podría utilizar en su reemplazo? Inicie una topología con CORE, cree una máquina y utilice en ella los comandos anteriores para practicar sus diferentes opciones, mínimamente:
+
+* Configurar y quitar una dirección IP en una interfaz.
+* Ver la tabla de ruteo de la máquina.
+
+_ifconfig_ permite configurar o desplegar numerosos parámetros de las interfaces de red residentes en el núcleo, como la dirección IP(ya sea estática o dinámica), o la máscara de red. Si se lo llama sin argumentos suele mostrar la configuración vigente de las interfaces de red activas, con detalles como la dirección MAC o el tráfico que ha circulado por las mismas hasta el momento.  
+_route_ es una herramienta que permite manipular las tablas de enrutamiento del sistema.
+
+### División en subredes
+
+7. Para cada una de las siguientes direcciones IP (172.16.58.223/26, 163.10.5.49/27, 128.10.1.0/23, 10.1.0.0/24, 8.40.11.179/12) determine:
+
+    1. ¿De qué clase de red es la dirección dada (Clase A, B o C)?
+
+        172.16.58.223/26: Clase B.
+        163.10.5.49/27: Clase B.
+        128.10.1.0/23: Clase B.
+        10.1.0.0/24: Clase A.
+        8.40.11.179/12: Clase A.
+
+    2. ¿Cuál es la dirección de subred?
+
+        172.16.58.223/26: 172.16.58.192/26.
+        163.10.5.49/27: 163.10.5.32/27.
+        128.10.1.0/23: 128.10.0.0/23.
+        10.1.0.0/24: 10.1.0.0/24.
+        8.40.11.179/12: 8.32.0.0/12.
+
+    3. ¿Cuál es la cantidad máxima de hosts que pueden estar en esa subred?
+
+        172.16.58.223/26: quedan para usar 6 bits, por lo que 2^6 - 2(por la dirección de subred y la de broadcast que no son utilizables), es decir, 62 hosts.
+        163.10.5.49/27: quedan para usar 5 bits, por lo que 2^5 - 2(por la dirección de subred y la de broadcast que no son utilizables), es decir, 30 hosts.
+        128.10.1.0/23: quedan para usar 9 bits, por lo que 2^9 - 2(por la dirección de subred y la de broadcast que no son utilizables), es decir, 510 hosts.
+        10.1.0.0/24: quedan para usar 8 bits, por lo que 2^8 - 2(por la dirección de subred y la de broadcast que no son utilizables), es decir, 254 hosts.
+        8.40.11.179/12: quedan para usar 20 bits, por lo que 2^20 - 2(por la dirección de subred y la de broadcast que no son utilizables), es decir, 1048574 hosts.
+
+    4. ¿Cuál es la dirección de broadcast de esa subred?
+
+        172.16.58.223/26: 172.16.58.255/26.
+        163.10.5.49/27: 163.10.5.63/27.
+        128.10.1.0/23: 128.10.1.255/23.
+        10.1.0.0/24: 10.1.0.255/24.
+        8.40.11.179/12: 8.47.255.255/12.
+
+    5. ¿Cuál es el rango de direcciones IP válidas dentro de la subred?
+
+        172.16.58.223/26: 172.16.58.193/26 - 172.16.58.254/26.
+        163.10.5.49/27: 163.10.5.33/27 - 163.10.5.62/27.
+        128.10.1.0/23: 128.10.0.1/23 - 128.10.1.254/23.
+        10.1.0.0/24: 10.1.0.1/24 - 10.1.0.254/24.
+        8.40.11.179/12: 8.32.0.1/12 - 8.47.255.254/12.
