--- a/practica/07-ip.md
+++ b/practica/07-ip.md
@@ -208,3 +208,34 @@ _route_ es una herramienta que permite manipular las tablas de enrutamiento del 
         172.26.22.0 - Red privada.  
         172.17.10.0 - Red privada.  
         191.26.145.0 -Red pública.
+
+11. ¿Qué es CIDR (Class Interdomain routing)? ¿Por qué resulta útil?
+
+    Es una mejora a la forma de interpretar las direcciones IP. Su introducción permitió una mayor flexibilidad al dividir rangos de direcciones IP en redes separadas. De esta manera, permitió, por un lado, un uso más eficiente de las cada vez más escasas redes IPv4 y, por el otro, un mayor uso de la jerarquía de direcciones, disminuyendo la sobrecarga de los enrutadores principales de internet para realizar el enrutamiento.
+
+12. ¿Cómo publicaría un router las siguientes redes si se aplica CIDR?
+
+    1. 198.10.1.0/24 
+    2. 198.10.0.0/24
+    3. 198.10.3.0/24
+    4. 198.10.2.0/24
+
+    Las publicaría resumiéndolas en la red 198.10.0.0/22.
+
+13. Listar las redes involucradas en los siguientes bloques CIDR:
+
+    1. 200.56.168.0/21
+
+        200.56.168.0/24 - 200.56.175.0/24
+
+    2. 195.24.0.0/13
+
+        195.24.0.0/16 - 195.31.0.0/16
+
+    3. 195.24/13
+
+        195.24.0.0/16 - 195.31.0.0/16
+
+14. El bloque CIDR 128.0.0.0/2 o 128/2 ¿Equivale a listar todas las direcciones de red de clase B? ¿Cuál sería el bloque CIDR que agrupa todas las redes de clase A?
+
+    Si, equivale a listar todas las direcciones de red de clase B. El bloque CIDR que listaría todas las redes de clase A sería 0.0.0.0/1.
